kubectl-deployments-yaml/3-miscs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webpack-ts-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: webpack-ingress.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webpack-ts-ingress-service
                port:
                  number: 8080
